# agg-ws

./: Cargo.toml  README.md
examples/: agg-book.rs  agg-trade-async.rs  agg-trade.rs
src/: app.rs  book.rs  client.rs  error.rs  gdax.rs  hyperliquid.rs  kraken.rs  lib.rs  trades.rs  websocket.rs
