[package]
name = "agg-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
rust_decimal = "1.29.1"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["rustls-tls-native-roots"] }
url = "2.3.1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.96"
serde = { version = "1", features = ["derive"] }
rust_decimal_macros = "1.29.1"
better-panic = "0.3.0"
void = "1.0.2"
